--- a/test/UITest.html
+++ b/test/UITest.html
@@ -10,27 +10,26 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <script src="../jquery.ui.combify.js"></script>
-    <script src="tests.js"></script>
   <style>
 	</style>
 </head>
 <body>
     <div>
-			<select id="TwoOptions">
-				<option value="1">Some Option</option>
+			<select id="TwoOptions" name="Two.Options">
+				<option value="1" selected="selected">Some Option</option>
 				<option value="2">Some Other Option</option>
 			</select>
     </div>
     <div style="margin-top: 20px;">
-			<select id="OneOption">
+			<select id="OneOption" name="One.Options">
 				<option value="1">Some Option</option>
 			</select>
     </div>
     <div style="margin-top: 20px;">
-			<select id="ThreeOptions">
-				<option>Some Option</option>
-				<option selected="selected">Some Other Option</option>
-				<option>Some Other Option</option>
+			<select id="ThreeOptions" name="Three.Options">
+				<option value="1">Some Option</option>
+				<option value="2" selected="selected">Some Other Option</option>
+				<option value="3">Some Other Other Option</option>
 			</select>
     </div>
     <div style="margin-top: 20px;">
